[gd_scene load_steps=6 format=3 uid="uid://c5oiume1ldvsd"]

[ext_resource type="Script" uid="uid://cjan4hu3lbgay" path="res://scripts/Main.gd" id="1_8yh4f"]
[ext_resource type="PackedScene" uid="uid://hub3utff3g0g" path="res://scenes/Player.tscn" id="2_x3b7g"]
[ext_resource type="PackedScene" path="res://scenes/UpgradeMenu.tscn" id="3_upgrade"]
[ext_resource type="PackedScene" uid="uid://b0tajmw3670mq" path="res://scenes/GameOver.tscn" id="4_game_over"]
[ext_resource type="PackedScene" path="res://scenes/PauseMenu.tscn" id="5_pause"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8yh4f")

[node name="Player" parent="." instance=ExtResource("2_x3b7g")]

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="EnemySpawner" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = -20.0
value = 100.0

[node name="LevelLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -70.0
offset_right = 120.0
offset_bottom = -50.0
text = "Level: 1"

[node name="XPBar" type="ProgressBar" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0

[node name="WaveLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 40.0
text = "Wave: 1"
horizontal_alignment = 2

[node name="KillCountLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 45.0
offset_right = -20.0
offset_bottom = 65.0
text = "Kills: 0/10"
horizontal_alignment = 2

[node name="UpgradeMenu" parent="UI" instance=ExtResource("3_upgrade")]
grow_horizontal = 2
grow_vertical = 2

[node name="GameOver" parent="UI" instance=ExtResource("4_game_over")]

[node name="PauseMenu" parent="UI" instance=ExtResource("5_pause")]
grow_horizontal = 2
grow_vertical = 2
